@@ -44,6 +44,9 @@ is recommend to always specify the application (absolute path) and its parameter
 .IP
 This option is ignored if fcgiapp is given.
 .TP 8
+.B  \-d <path>
+Change the current directory before spawning the application.
+.TP 8
 .B  \-a <addr>
 IP address to bind to; only used if \-p is given too.
 .TP 8
